fixed Project and tests